@@ -1,3 +1,11 @@
+
+11/01/2011 Changes
+
+Added to grammar to allow parsing of each kind of statement. See 'statements:' in grammar file.
+Answering the result of an expression is now implemented. If an expreesion result is not answered
+the value is popped off the stack to keep it balanced.
+
+
 10/01/2011 Changes
 
 Added ProtoMethod as base for all methods.
